--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -13,14 +13,16 @@ body {
   margin: auto;
 }
 
-}
 h3 {
-  font-family: "policeH3", Arial, Helvetica, sans-serif;
+  font-family: "policeH", Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin: 5px;
 }
 
 h2 {
   margin-left: 7%;
-  margin-top: 50px;
+  font-size: 30px;
+  padding-top: 50px;
   font-family: "policeH", Arial, Helvetica, sans-serif;
 }
 a {
@@ -75,7 +77,7 @@ a {
 }
 
 .header1__gris__form__label .entreeVille {
-  width:200px;
+  width: 200px;
   border: 0;
   background-color: #eaeaea;
   font-size: 20px;
@@ -114,14 +116,15 @@ a {
   a {
     font-family: "policeH", Arial, Helvetica, sans-serif;
   }
- 
 }
 
 .fonctionnement__list {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  & h2 {
+    margin-bottom: 0;
+  }
   &__bloc__icones {
     display: flex;
     justify-content: flex-start;
@@ -134,7 +137,7 @@ a {
     border-style: none;
     position: absolute;
     z-index: 1;
-   
+
     & p {
       display: flex;
       justify-content: center;
@@ -153,13 +156,11 @@ a {
     }
   }
   @media screen and (min-width: 767px) {
-    // flex-direction: row;
     justify-content: space-around;
     align-items: center;
 
     &__bloc__icones {
       width: 100%;
-      // position: relative;
     }
   }
 }
@@ -171,13 +172,13 @@ a {
 
   width: 80%;
   max-width: 450px;
-  height: 100px;
-  margin: 30px;
+  height: 85px;
+  margin: 15px;
   background-color: #f6f6f6;
 
   border-radius: 25px;
   box-shadow: 0px 6px 10px 3px #d3d3d3;
-  
+
   @media screen and (min-width: 767px) {
     flex-direction: column;
   }
@@ -195,24 +196,20 @@ a {
       margin: 0px;
       text-align: center;
       padding-bottom: 10px;
-      
     }
-    @media screen and (max-width:350px) {
+    @media screen and (max-width: 350px) {
       margin-left: 25%;
+    }
   }
-}
 }
 .fonctionnement__list__bloc__icones:hover {
   color: $grad1;
 }
 
 /* section restaurant */
+
 .restaurant {
   background-color: #f6f6f6;
-  // &__titre {
-  //   padding-top: 30px;
-  //   width: auto;
-  // }
 }
 .restaurant__gris {
   display: flex;
@@ -262,7 +259,7 @@ a {
   &__img img {
     width: 100%;
     height: 100%;
-    // max-height: 400px;
+
     border-radius: 25px 25px 0 0;
     object-fit: cover;
   }
@@ -284,14 +281,13 @@ a {
       justify-content: center;
       align-items: flex-start;
       width: 80%;
-      // height: 70px;
       padding-left: 15px;
       h2 {
         margin: 0;
       }
       p {
-        margin: 0;
-        font-size: 22px;
+        margin: 5px;
+        font-size: 20px;
       }
     }
   }
