--- a/sass/_pages/_accueil.scss
+++ b/sass/_pages/_accueil.scss
@@ -1,10 +1,10 @@
 /* base */
 @import "_utils_variables.scss";
-@import "_base_police.scss";
 @import "_utils_coeur.scss";
+@import "_base_police.scss";
 @import "_composants_bouton.scss";
-@import "_loadingSpinner.scss";
-@import "_footer.scss";
+@import "_layouts_loadingSpinner.scss";
+@import "_layout_footer.scss";
 
 body {
   font-family: "policeP", Arial, Helvetica, sans-serif;
@@ -254,7 +254,7 @@ a {
       margin-right: 15px;
       width: 100px;
       height: 40px;
-      background-color: #98e2cf;
+      background-color: $tertiaire;
       color: #008664;
       border-radius: 5px;
       font-weight: 800;
